--- a/public/common styles/footer.css
+++ b/public/common styles/footer.css
@@ -43,5 +43,5 @@
     text-decoration: underline;
     text-decoration-color:#EE3472;
     text-underline-offset: 2px;
-    font-size: 200;
+    font-size: 20px;
 }
