--- a/public/common styles/footer.css
+++ b/public/common styles/footer.css
@@ -41,7 +41,7 @@
 .footer-privacy-link {
     color: bisque;
     text-decoration: underline;
-    text-decoration-color:#EE3472;
+    text-decoration-color:coral;
     text-underline-offset: 2px;
     font-size: 12px;
 }
