--- a/public/common styles/header.css
+++ b/public/common styles/header.css
@@ -25,6 +25,12 @@
     align-items: center;
 }
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
 /* Dropdown Button */
 .dropbtn {
     background-color: transparent;
