--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -67,7 +67,7 @@
             >
                 <img 
                     class="icon-imgs"
-                    src="/public/website images/mb_logo.png" 
+                    src="/website images/mb_logo.png" 
                     alt="MegaBytten Logo"
                 >
             </a>
@@ -79,7 +79,7 @@
             >
                 <img 
                     class="icon-imgs"
-                    src="/public/website images/eutrc app/icons/home_icon.png" 
+                    src="/website images/eutrc app/icons/home_icon.png" 
                     alt="Home Icon"
                 >
             </a>
