--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -90,7 +90,7 @@
                 EUTRC APP Home Page
             </h1>
 
-            <p>Welcome back <% name %></p>
+            <p>Welcome back <%= name %></p>
 
             <div class="trainings-section">
                 <h2>EUTRC Trainings</h2>
