--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -90,7 +90,7 @@
                 EUTRC APP Home Page
             </h1>
 
-            <p style="text-align:center;">Welcome back <%= name %></p>
+            <text style="text-align:center;">Welcome back <%= name %></text>
 
             <div class="trainings-section">
                 <h2>EUTRC Trainings</h2>
