--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -81,8 +81,8 @@
         action="http://megabytten.org/eutrcapp/verfbot"
         method="post"
         >
-            <input type="hidden" id="email" name="email" value="<% email %>">
-            <input type="hidden" id="password" name="password" value="<% password %>">
+            <input type="hidden" id="email" name="email" value="<%= email %>">
+            <input type="hidden" id="password" name="password" value="<%= password %>">
             <input class="action-btns" type="submit" value="Send Code">
         </form>
         <button class="action-btns">
