ejs syntax error

--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -104,7 +104,7 @@
         </form>
     </div> 
 
-    <%= if (status == 0) {  
+    <% if (status == 0) {  
             let btn-section = document.getElementById("actionbtns-section")
             btn-section.style.display = "flex"
         } else if (status == 1) { 
