--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -105,11 +105,11 @@
     </div> 
 
     <% if (status == 0) {  
-            let btn-section = document.getElementById("actionbtns-section")
-            btn-section.style.display = "flex"
+            let btnSection = document.getElementById("actionbtns-section")
+            btnSection.style.display = "flex"
         } else if (status == 1) { 
-            let enter-section = document.getElementById("entercode-section")
-            enter-section.style.display = "flex"
+            let enterSection = document.getElementById("entercode-section")
+            enterSection.style.display = "flex"
         } 
     %> 
 
