--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -76,42 +76,38 @@
         </p>
     </div>
 
-    <div class="action-btns-section" id="actionbtns-section">
-        <form 
-        action="http://megabytten.org/eutrcapp/verfbot"
-        method="post"
-        >
-            <input type="hidden" id="email" name="email" value="<%= email %>">
-            <input type="hidden" id="password" name="password" value="<%= password %>">
-            <input class="action-btns" type="submit" value="Send Code">
-        </form>
-        <button class="action-btns" onclick="enterCode()">
-            Enter Code
-        </button>
-    </div>
-    <div class="action-btns-section" id="entercode-section">
-        <p>
-            Verification email sent. Please enter the verif code below!
-        </p>
-        <form 
-        action="http://megabytten.org/eutrcapp/verify"
-        method="post"
-        >
-            <input type="hidden" id="email" name="email" value="<%= email %>">
-            <input type="hidden" id="password" name="password" value="<%= password %>">
-            <input type="number" maxlength="10" name="verifCode" id="verifCode" placeholder="code">
-            <input type="submit" value="Verify">
-        </form>
-    </div> 
 
-    <% if (status == 0) {  
-            let btnSection = document.getElementById("actionbtns-section")
-            btnSection.style.display = "flex"
-        } else if (status == 1) { 
-            let enterSection = document.getElementById("entercode-section")
-            enterSection.style.display = "flex"
-        } 
-    %> 
+    <% if (status == 0) { %> 
+        <div class="action-btns-section" id="actionbtns-section">
+            <form 
+            action="http://megabytten.org/eutrcapp/verfbot"
+            method="post"
+            >
+                <input type="hidden" id="email" name="email" value="<%= email %>">
+                <input type="hidden" id="password" name="password" value="<%= password %>">
+                <input class="action-btns" type="submit" value="Send Code">
+            </form>
+            <button class="action-btns" onclick="enterCode()">
+                Enter Code
+            </button>
+        </div>
+    <% } else if (status == 1) { %>
+        <div class="action-btns-section" id="entercode-section">
+            <p>
+                Verification email sent. Please enter the verif code below!
+            </p>
+            <form 
+            action="http://megabytten.org/eutrcapp/verify"
+            method="post"
+            >
+                <input type="hidden" id="email" name="email" value="<%= email %>">
+                <input type="hidden" id="password" name="password" value="<%= password %>">
+                <input type="number" maxlength="10" name="verifCode" id="verifCode" placeholder="code">
+                <input type="submit" value="Verify">
+            </form>
+        </div> 
+    <% } %> 
+    
 
     <script>
         function enterCode(){
