--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -34,8 +34,8 @@
             color: rgb(255, 79, 79);
         }
 
-        .action-btns-section,
-        .check-code-section {
+        .check-code-section,
+        .action-btns-section {
             display:flex;
             justify-content: center;
             align-items: center;
@@ -92,7 +92,7 @@
         </button>
     </div>
 
-    <div class="check-code-sctn" id="enter-code-section">
+    <div class="check-code-section" id="enter-code-section">
         <p>
             Verification email sent. Please enter the verif code below!
         </p>
