--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -110,7 +110,8 @@
 
     <script>
         let statusCode = '<%status%>'
-        console.log(statusCode);
+        console.log('HELLO!');
+        console.log('status code: ' + statusCode);
         if (statusCode == 0){
             //native state, just freshly joined the page
         } else if (statusCode==1) {
