--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -109,7 +109,7 @@
     
 
     <script>
-        let statusCode = '<%status%>'
+        let statusCode = '<%=status%>'
         console.log('HELLO!');
         console.log('status code: ' + statusCode);
         if (statusCode == 0){
