--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -83,7 +83,7 @@
     </div>
 
     <div class="action-btns-section" id="action-btns-section">
-        <p>
+        <p style="width: 100%;">
             If you have been sent a verification email before, please check 
             your email and spam folder for your verification code
         </p>
