--- a/views/eutrc_app/signup.ejs
+++ b/views/eutrc_app/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EUTRC Sign In</title>
+    <title>EUTRC Sign Up</title>
 
     <style>
         body {
@@ -40,13 +40,12 @@
         .signin-container {
             background-color: beige;
             display: flex;
-            flex-direction: column;
+            orientation: vertical;
             justify-content: center;
             padding: 20px;
         }
 
         .signin-form {
-            align-self: center;
             width: 200px
         }
 
@@ -86,11 +85,10 @@
     </div>
 
     <h1>
-        EUTRC APP Sign in
+        EUTRC APP Sign Up
     </h1>
 
     <div class="signin-container">
-
         <form class="signin-form" action="/eutrcapp/login" method="post">
             <text>Email</text> <br>
             <input class="signin-element" type="email" id="email" name="email" placeholder="@exeter.ac.uk">
@@ -98,18 +96,7 @@
             <input class="signin-element" type="password" id="password" name="password" placeholder="***********">
             <input class="submit-btn" type="submit" value="Submit">
           </form> 
-
-        <a href="/eutrc/app/signup" style="text-align: center; margin-top: 20px; font-size: small;">
-            Don't have an account?
-            <br>Click here
-        </a>
     </div>
-
-    <div style="display: flex; justify-content:center;">
-        
-    </div>
-
-    
     
 </body>
 </html>
