script type=text/js

--- a/views/eutrc_app/signup.ejs
+++ b/views/eutrc_app/signup.ejs
@@ -106,7 +106,7 @@
           </form> 
     </div>
 
-    <script>
+    <script type="text/javascript">
         function checkPwd(){
             let pwd1 = document.getElementById('newPassword').value;
             let pwd2 = document.getElementById('confirmPassword').value;
