--- a/views/eutrc_app/signup.ejs
+++ b/views/eutrc_app/signup.ejs
@@ -99,7 +99,7 @@
             <text>Phone Number</text> <br>
             <input class="signin-element" type="number" id="number" name="number" placeholder="07238756120">
             <text>Create Password</text> <br>
-            <input class="signin-element" type="password" id="newPassword" name="newPassword" placeholder="***********">
+            <input class="signin-element" type="password" id="password" name="password" placeholder="***********">
             <text>Confirm Password</text> <br>
             <input class="signin-element" type="password" id="confirmPassword" name="confirmPassword" placeholder="***********">
             <input class="submit-btn" type="submit" value="Submit">
@@ -108,16 +108,53 @@
 
     <script type="text/javascript">
         function checkPwd(e){
-            let pwd1 = document.getElementById('newPassword').value;
+            let pwd1 = document.getElementById('password').value;
             let pwd2 = document.getElementById('confirmPassword').value;
             console.log(`trace: ${pwd1} and ${pwd2}`);
-            if (pwd1 != pwd2){
+            if (pwd1 != pwd2){ //Throw error if passwords dont match
                 e.preventDefault();
                 alert("Error! Passwords do not match.")
                 return false
-            } else {
-                return true
             }
+
+            if (pwd1 == '' || pwd1 == null) { //empty check
+                e.preventDefault();
+                alert("Error! Password cannot be empty.")
+                return false
+            }
+            
+            const email = document.getElementById('email').value;
+            if (!email.includes('@exeter.ac.uk')){ //Throw error if email doesnt contain '@exeter.ac'
+                e.preventDefault();
+                alert("Error! Email must be a registered '@exeter.ac.uk' address.")
+                return false
+            }
+            if (email == '' || email == null) { //empty check
+                e.preventDefault();
+                alert("Error! Email address cannot be empty.")
+                return false
+            }
+
+            const firstName = document.getElementById('firstName').value;
+            const lastName =  document.getElementById('lastName').value;
+            if (firstName == '' || lastName == '' || firstName == null || lastName == null) {
+                e.preventDefault();
+                alert("Error! First and Last name cannot be empty.")
+                return false
+            }
+            const number = document.getElementById('number').value;
+            if (!onlyLettersAndNumbers(firstName) || !onlyLettersAndNumbers(lastName) || !onlyLettersAndNumbers(pwd1) || !onlyLettersAndNumbers(number)) {
+                e.preventDefault();
+                alert("Error! First name, last name, password and phone number cannot contain special characters.")
+                return false
+            }
+
+
+            return true;
+        }
+
+        function onlyLettersAndNumbers(str) {
+            return /^[A-Za-z0-9]*$/.test(str);
         }
     </script>
     
