/eutrcapp/signup filepath changed for form action

--- a/views/eutrc_app/signup.ejs
+++ b/views/eutrc_app/signup.ejs
@@ -89,7 +89,7 @@
     </h1>
 
     <div class="signin-container">
-        <form class="signin-form" onsubmit="return checkPwd(event)" action="/eutrcapp/login" method="post">
+        <form class="signin-form" onsubmit="return checkPwd(event)" action="/eutrcapp/signup" method="post">
             <text>University Email</text> <br>
             <input class="signin-element" type="email" id="email" name="email" placeholder="@exeter.ac.uk">
             <text>First Name</text> <br>
