--- a/views/eutrc_app/signin.ejs
+++ b/views/eutrc_app/signin.ejs
@@ -85,11 +85,25 @@
             alt="An Image displaying MegaBytten's Touch Training Tracker's logo.">
     </div>
 
-    <h1>
-        EUTRC APP Sign in
-    </h1>
+    
 
     <div class="signin-container">
+
+        <h1>
+            EUTRC APP Sign in
+        </h1>
+
+        <h4 id="error-msg">This email address already exists. Try signing in instead?</h4>
+
+        <script>
+            let statusCode = '<%status%>'
+            if (statusCode == 0){
+                let errorMsg = document.getElementById('error-msg')
+                errorMsg.style.display = 'hidden'
+            } else if (statusCode == 1){
+                //nothing to change.
+            }
+        </script>
 
         <form class="signin-form" action="/eutrcapp/login" method="post">
             <text>Email</text> <br>
@@ -106,10 +120,7 @@
     </div>
 
     <div style="display: flex; justify-content:center;">
-        
     </div>
-
-    
     
 </body>
 </html>
