added name="" attribute to error msg

--- a/views/eutrc_app/signin.ejs
+++ b/views/eutrc_app/signin.ejs
@@ -90,7 +90,7 @@
     </h1>
 
     <div class="signin-container">
-        <h4 id="error-msg" style="text-align: center;">
+        <h4 name="error-msg" id="error-msg" style="text-align: center;">
             This email address already exists. Try signing in instead?
         </h4>
 
