<%= not <% to obtain status

--- a/views/eutrc_app/signin.ejs
+++ b/views/eutrc_app/signin.ejs
@@ -95,7 +95,7 @@
         </h4>
 
         <script>
-            let statusCode = '<%status%>'
+            let statusCode = '<%=status%>'
             console.log(statusCode);
             if (statusCode == 0){
                 let errorMsg = document.getElementById('error-msg')
