forgotten password info text

--- a/views/eutrc_app/signin.ejs
+++ b/views/eutrc_app/signin.ejs
@@ -123,6 +123,7 @@
             <input class="signin-element" type="email" id="email" name="email" placeholder="@exeter.ac.uk">
             <text>Password</text> <br>
             <input class="signin-element" type="password" id="password" name="password" placeholder="***********">
+            <text style="text-align: center; margin-top: 10px; font-size: small;">Forgotten password? Contact admin!</text>
             <input class="submit-btn" type="submit" value="Submit">
           </form> 
 
